Bug squash: game no longer breaks on the word couldnt. Alert pops up when player has guessed 20 words

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,27 @@ aside{
 #guessed-words, #scrambled-words {
     line-height: 1.5;
 }
+
+.alert{
+    position: fixed;
+    border: 3px solid green;
+    width: 300px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -50px;
+    background-color: black;
+    opacity: 0;
+}
+
+.alert-header{
+    text-align: center;
+    color: black;
+    background-color: green;
+}
+
+.alert-body{
+    padding: 10px;
+}
+
